--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ edition       = "2018"
 [dependencies]
 mio = {version ="0.7", features = ["os-poll", "tcp"]}
 log = "0.4"
-crossbeam = "0.7"
-crossbeam-queue = "0.2"
-rand = "0.7.3"
+crossbeam = "0.8"
+crossbeam-queue = "0.3"
+
+[dev-dependencies]
+rand = "0.8"
 
 [[test]]
 name = "test"
