--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name          = "mio-misc"
-version       = "1.2.2"
+version       = "1.3.2"
 license       = "MIT"
 authors       = ["Onur Ozduygu"]
 description   = "Miscellaneous components for use with Mio"
@@ -12,7 +12,7 @@ categories    = ["asynchronous"]
 edition       = "2018"
 
 [dependencies]
-mio = {version ="0.7", features = ["os-poll", "tcp"]}
+mio = {version ="0.8", features = ["os-poll", "net"]}
 log = "0.4"
 crossbeam = "0.8"
 crossbeam-queue = "0.3"
