--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,13 @@
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-name: Continuous integration
+env:
+  CARGO_TERM_COLOR: always
+
+name: CI
 
 jobs:
   check:
